ПП. Форма планшетная версия.

--- a/source/form.html
+++ b/source/form.html
@@ -115,7 +115,7 @@
             </fieldset>
           </div>
           <div class="form__program-wrapper-item form__program-wrapper-item--submit">
-            <button class="form-submit button" type="submit">Отправить заявку</button>
+            <button class="form-submit button button--submit" type="submit">Отправить заявку</button>
             <p class="form__required">* — Обязательные поля</p>
           </div>
         </div>
