ПП. Форма десктоп версия.

--- a/source/form.html
+++ b/source/form.html
@@ -74,11 +74,11 @@
             <fieldset class="form__block form__block--contacts">
               <legend class="form__block-title form__block-title--contacts">Контактные данные (владельца кота)</legend>
               <div class="form__contacts-wrapper">
-                <p class="form__item input-text input-text--contact">
+                <p class="form__item input-text input-text--contacts">
                   <label class="input-text__label" for="form-email">E-mail:*</label>
                   <input class="input-text__input" type="email" id="form-email" name="email" placeholder="kuklachev@gmail.com">
                 </p>
-                <p class="form__item input-text input-text--contact">
+                <p class="form__item input-text input-text--contacts">
                   <label class="input-text__label" for="form-tel">Телефон:*</label>
                   <input class="input-text__input" type="tel" id="form-tel" name="telephone" placeholder="8 (960) 900-60-90">
                 </p>
@@ -115,7 +115,7 @@
             </fieldset>
           </div>
           <div class="form__program-wrapper-item form__program-wrapper-item--submit">
-            <button class="form-submit button button--submit" type="submit">Отправить заявку</button>
+            <button class="form__submit button button--submit" type="submit">Отправить заявку</button>
             <p class="form__required">* — Обязательные поля</p>
           </div>
         </div>
