--- a/source/form.html
+++ b/source/form.html
@@ -58,14 +58,14 @@
             <div class="form__program-wrapper-item form__program-wrapper-item--flex form__program-wrapper-item--type">
               <fieldset class="form__block form__block--type">
                 <p class="form__item input-radio">
-                  <input class="input-radio__input" type="radio" id="form-losing-weight" name="program" value="losing weight" checked>
+                  <input class="input-radio__input visually-hidden" type="radio" id="form-losing-weight" name="program" value="losing weight" checked>
                   <label class="input-radio__label" for="form-losing-weight">Похудение</label>
                 </p>
                 <p class="form__item input-radio">
-                  <input class="input-radio__input" type="radio" id="form-mass-gathering" name="program" value="mass-gathering">
+                  <input class="input-radio__input visually-hidden" type="radio" id="form-mass-gathering" name="program" value="mass-gathering">
                   <label class="input-radio__label" for="form-mass-gathering">Набор массы</label></p>
                 <p class="form__item input-radio">
-                  <input class="input-radio__input" type="radio" id="form-need-advice" name="program" value="need-advice">
+                  <input class="input-radio__input visually-hidden" type="radio" id="form-need-advice" name="program" value="need-advice">
                   <label class="input-radio__label" for="form-need-advice">Не знаю (Нужен ваш совет)</label></p>
               </fieldset>
             </div>
@@ -96,19 +96,19 @@
               <legend class="form__block-title form__block-title--additionally">Дополнительно</legend>
               <div class="form__additional-wrapper">
                 <p class="form__item input-checkbox">
-                  <input class="input-checkbox__input" type="checkbox" id="form-sweetener" name="sweetener" checked>
+                  <input class="input-checkbox__input  visually-hidden" type="checkbox" id="form-sweetener" name="sweetener" checked>
                   <label class="input-checkbox__label" for="form-sweetener">Сахарозаменитель</label>
                 </p>
                 <p class="form__item input-checkbox">
-                  <input class="input-checkbox__input" type="checkbox" id="form-water" name="water">
+                  <input class="input-checkbox__input visually-hidden" type="checkbox" id="form-water" name="water">
                   <label class="input-checkbox__label" for="form-water">Питьевая вода</label>
                 </p>
                 <p class="form__item input-checkbox">
-                  <input class="input-checkbox__input" type="checkbox" id="form-milk" name="milk">
+                  <input class="input-checkbox__input visually-hidden" type="checkbox" id="form-milk" name="milk">
                   <label class="input-checkbox__label" for="form-milk">Молоко</label>
                 </p>
                 <p class="form__item input-checkbox">
-                  <input class="input-checkbox__input" type="checkbox" id="form-vitamins" name="vitamins">
+                  <input class="input-checkbox__input visually-hidden" type="checkbox" id="form-vitamins" name="vitamins">
                   <label class="input-checkbox__label" for="form-vitamins">Витамины</label>
                 </p>
               </div>
