Сделал иконки у полей ввода телефона и почты.

--- a/source/form.html
+++ b/source/form.html
@@ -74,13 +74,13 @@
             <fieldset class="form__block form__block--contacts">
               <legend class="form__block-title form__block-title--contacts">Контактные данные (владельца кота)</legend>
               <div class="form__contacts-wrapper">
-                <p class="form__item input-text input-text--contacts">
+                <p class="form__item input-text input-text--contacts input-text--email">
                   <label class="input-text__label" for="form-email">E-mail:*</label>
-                  <input class="input-text__input" type="email" id="form-email" name="email" placeholder="kuklachev@gmail.com">
+                  <input class="input-text__input input-text__input--email" type="email" id="form-email" name="email" placeholder="kuklachev@gmail.com">
                 </p>
-                <p class="form__item input-text input-text--contacts">
+                <p class="form__item input-text input-text--contacts input-text--tel">
                   <label class="input-text__label" for="form-tel">Телефон:*</label>
-                  <input class="input-text__input" type="tel" id="form-tel" name="telephone" placeholder="8 (960) 900-60-90">
+                  <input class="input-text__input input-text__input--tel" type="tel" id="form-tel" name="telephone" placeholder="8 (960) 900-60-90">
                 </p>
               </div>
             </fieldset>
