--- a/source/index.html
+++ b/source/index.html
@@ -10,7 +10,11 @@
 
     <header class="page-header">
       <a class="page-header__logo logo-header">
-        <img class="page-header__logo-image" src="img/logo-mobile.svg" width="200" alt="Логотип компании Cat Energy">
+        <picture>
+          <source media="(min-width: 1440px)" srcset="img/logo-desktop.svg">
+          <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
+          <img class="page-header__logo-image" src="img/logo-mobile.svg" width="200" alt="Логотип компании Cat Energy">
+        </picture>
       </a>
       <nav class="page-header__nav main-nav">
         <button class="page-header__nav-toggle" type="button">
@@ -18,13 +22,13 @@
         </button>
         <ul class="main-nav__list">
           <li class="main-nav__item">
-            <a class="main-nav__link main-nav__link--active">Главная</a>
+            <a class="main-nav__link main-nav__link--index main-nav__link--active main-nav__link--active-index">Главная</a>
           </li>
           <li class="main-nav__item">
-            <a class="main-nav__link" href="catalog.html">Каталог продукции</a>
+            <a class="main-nav__link main-nav__link--index" href="catalog.html">Каталог продукции</a>
           </li>
           <li class="main-nav__item">
-            <a class="main-nav__link" href="form.html">Подбор программы</a>
+            <a class="main-nav__link main-nav__link--index" href="form.html">Подбор программы</a>
           </li>
         </ul>
       </nav>
@@ -37,20 +41,24 @@
           <div class="programs__header-wrapper">
             <h2 class="programs__title">Функциональное питание для котов</h2>
             <p class="programs__slogan">Занялся собой? Займись котом!</p>
-            <img class="programs__picture" src="img/index-can-mobile@1x.png" width="280" height="271" alt="Корм Cat Energy">
+            <picture class="programs__picture">
+              <source media="(min-width: 1440px)" srcset="img/index-can-desktop@1x.png 1x, img/index-can-desktop@2x.png 2x">
+              <source media="(min-width: 768px)" srcset="img/index-can-tablet@1x.jpg 1x,img/index-can-tablet@2x.jpg 2x">
+              <img src="img/index-can-mobile@1x.png" srcset="img/index-can-mobile@2x.png 2x" alt="Корм Cat Energy">
+            </picture>
             <a class="programs__form-link button button--program" href="form.html">Подобрать программу</a>
           </div>
         </header>
         <section class="programs__list program-types">
           <h2 class="visually-hidden">Программы питания для котов</h2>
           <ul class="program-types__list">
-            <li class="program-types__item program-types__item--loss">
-              <h3 class="program-types__title">Похудение</h3>
+            <li class="program-types__item program-types__item--slim">
+              <h3 class="program-types__title program-types__title--slim">Похудение</h3>
               <p class="program-types__text">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
               <a class="program-types__link" href="catalog-slim.html">Каталог Slim</a>
             </li>
-            <li class="program-types__item program-types__item--mass">
-              <h3 class="program-types__title">Набор массы</h3>
+            <li class="program-types__item program-types__item--pro">
+              <h3 class="program-types__title program-types__title--pro">Набор массы</h3>
               <p class="program-types__text program-types__text--mass">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
               <a class="program-types__link" href="catalog-pro.html">Каталог Pro</a>
             </li>
@@ -100,7 +108,11 @@
               </div>
             </div>
             <div class="example__wrapper-big example__wrapper-big--slider">
-              <img class="example__before" src="img/before-mobile@1x.png" width="320" height="240" alt="Кот до похудения">
+              <picture class="example__before">
+                <source media="(min-width: 1440px)" srcset="img/before-desktop@1x.png 1x, img/before-desktop@2x.png 2x">
+                <source media="(min-width: 768px)" srcset="img/before-tablet@1x.png 1x, img/before-tablet@2x.png 2x">
+                <img src="img/before-mobile@1x.png" srcset="img/before-mobile@2x.png 2x" alt="Кот до похудения">
+              </picture>
               <div class="example__range-control">
                 <button class="example__toggle" type="button">Было</button>
                 <div class="example__range-scale" >
