--- a/source/catalog.html
+++ b/source/catalog.html
@@ -10,7 +10,11 @@
 
     <header class="page-header">
       <a class="page-header__logo logo-header" href="index.html">
-        <img class="page-header__logo-image" src="img/logo-mobile.svg" width="200" alt="Логотип компании Cat Energy">
+        <picture>
+          <source media="(min-width: 1440px)" srcset="img/logo-desktop.svg">
+          <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
+          <img class="page-header__logo-image" src="img/logo-mobile.svg" width="200" alt="Логотип компании Cat Energy">
+        </picture>
       </a>
       <nav class="page-header__nav main-nav">
         <button class="page-header__nav-toggle" type="button">
@@ -39,7 +43,7 @@
             <div class="item__wrapper">
               <div class="item__wrapper-inner">
                 <a class="item__picture-link" href="#item">
-                  <img class="item__picture" src="img/chicken-small-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 500 г">
+                  <img class="item__picture" src="img/chicken-small-mobile@1x.jpg" srcset="img/chicken-small-mobile@2x.jpg 2x" width="140" height="144" alt="Cat Energy PRO 500 г">
                 </a>
                 <div class="item__wrapper-caption">
                   <a href="#item">
@@ -68,7 +72,7 @@
             <div class="item__wrapper">
               <div class="item__wrapper-inner">
                 <a class="item__picture-link" href="#item">
-                  <img class="item__picture" src="img/chicken-big-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 500 г">
+                  <img class="item__picture" src="img/chicken-big-mobile@1x.jpg" srcset="img/chicken-big-mobile@2x.jpg 2x" width="140" height="144" alt="Cat Energy PRO 500 г">
                 </a>
                 <div class="item__wrapper-caption">
                   <a href="#item">
@@ -97,7 +101,7 @@
             <div class="item__wrapper">
               <div class="item__wrapper-inner">
                 <a class="item__picture-link" href="#item">
-                  <img class="item__picture" src="img/fish-small-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 500 г">
+                  <img class="item__picture" src="img/fish-small-mobile@1x.jpg" srcset="img/fish-small-mobile@2x.jpg 2x" width="140" height="144" alt="Cat Energy PRO 500 г">
                 </a>
                 <div class="item__wrapper-caption">
                   <a href="#item">
@@ -126,7 +130,7 @@
             <div class="item__wrapper">
               <div class="item__wrapper-inner">
                 <a class="item__picture-link" href="#item">
-                  <img class="item__picture" src="img/fish-big-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 500 г">
+                  <img class="item__picture" src="img/fish-big-mobile@1x.jpg" srcset="img/fish-big-mobile@2x.jpg 2x" width="140" height="144" alt="Cat Energy PRO 500 г">
                 </a>
                 <div class="item__wrapper-caption">
                   <a href="#item">
@@ -155,7 +159,7 @@
             <div class="item__wrapper">
               <div class="item__wrapper-inner">
                 <a class="item__picture-link" href="#item">
-                  <img class="item__picture" src="img/buckwheat-small-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 500 г">
+                  <img class="item__picture" src="img/buckwheat-small-mobile@1x.jpg" srcset="img/buckwheat-small-mobile@2x.jpg 2x" width="140" height="144" alt="Cat Energy PRO 500 г">
                 </a>
                 <div class="item__wrapper-caption">
                   <a href="#item">
@@ -184,7 +188,7 @@
             <div class="item__wrapper">
               <div class="item__wrapper-inner">
                 <a class="item__picture-link" href="#item">
-                  <img class="item__picture" src="img/buckwheat-big-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 1000 г">
+                  <img class="item__picture" src="img/buckwheat-big-mobile@1x.jpg" srcset="img/buckwheat-big-mobile@2x.jpg 2x" width="140" height="144" alt="Cat Energy PRO 1000 г">
                 </a>
                 <div class="item__wrapper-caption">
                   <a href="#item">
@@ -213,7 +217,7 @@
             <div class="item__wrapper">
               <div class="item__wrapper-inner">
                 <a class="item__picture-link" href="#item">
-                  <img class="item__picture" src="img/rice-small-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 1000 г">
+                  <img class="item__picture" src="img/rice-small-mobile@1x.jpg" srcset="img/rice-small-mobile@2x.jpg 2x" width="140" height="144" alt="Cat Energy PRO 1000 г">
                 </a>
                 <div class="item__wrapper-caption">
                   <a href="#item">
