--- a/source/catalog.html
+++ b/source/catalog.html
@@ -43,7 +43,10 @@
             <div class="item__wrapper">
               <div class="item__wrapper-inner">
                 <a class="item__picture-link" href="#item">
-                  <img class="item__picture" src="img/chicken-small-mobile@1x.jpg" srcset="img/chicken-small-mobile@2x.jpg 2x" width="140" height="144" alt="Cat Energy PRO 500 г">
+                  <picture>
+                    <source media="(min-width: 768px)" srcset="img/chicken-small-tablet@1x.png 1x, img/chicken-small-tablet@2x.png 2x">
+                    <img class="item__picture" src="img/chicken-small-mobile@1x.jpg" srcset="img/chicken-small-mobile@2x.jpg 2x" alt="Cat Energy PRO 500 г">
+                  </picture>
                 </a>
                 <div class="item__wrapper-caption">
                   <a href="#item">
@@ -72,7 +75,10 @@
             <div class="item__wrapper">
               <div class="item__wrapper-inner">
                 <a class="item__picture-link" href="#item">
-                  <img class="item__picture" src="img/chicken-big-mobile@1x.jpg" srcset="img/chicken-big-mobile@2x.jpg 2x" width="140" height="144" alt="Cat Energy PRO 500 г">
+                  <picture>
+                    <source media="(min-width: 768px)" srcset="img/chicken-big-tablet@1x.png 1x, img/chicken-big-tablet@2x.png 2x">
+                    <img class="item__picture" src="img/chicken-big-mobile@1x.jpg" srcset="img/chicken-big-mobile@2x.jpg 2x" alt="Cat Energy PRO 500 г">
+                  </picture>
                 </a>
                 <div class="item__wrapper-caption">
                   <a href="#item">
@@ -101,7 +107,10 @@
             <div class="item__wrapper">
               <div class="item__wrapper-inner">
                 <a class="item__picture-link" href="#item">
-                  <img class="item__picture" src="img/fish-small-mobile@1x.jpg" srcset="img/fish-small-mobile@2x.jpg 2x" width="140" height="144" alt="Cat Energy PRO 500 г">
+                  <picture>
+                    <source media="(min-width: 768px)" srcset="img/fish-small-tablet@1x.png 1x, img/fish-small-tablet@2x.png 2x">
+                    <img class="item__picture" src="img/fish-small-mobile@1x.jpg" srcset="img/fish-small-mobile@2x.jpg 2x" alt="Cat Energy PRO 500 г">
+                  </picture>
                 </a>
                 <div class="item__wrapper-caption">
                   <a href="#item">
@@ -130,7 +139,10 @@
             <div class="item__wrapper">
               <div class="item__wrapper-inner">
                 <a class="item__picture-link" href="#item">
-                  <img class="item__picture" src="img/fish-big-mobile@1x.jpg" srcset="img/fish-big-mobile@2x.jpg 2x" width="140" height="144" alt="Cat Energy PRO 500 г">
+                  <picture>
+                    <source media="(min-width: 768px)" srcset="img/fish-big-tablet@1x.png 1x, img/fish-big-tablet@2x.png 2x">
+                    <img class="item__picture" src="img/fish-big-mobile@1x.jpg" srcset="img/fish-big-mobile@2x.jpg 2x" alt="Cat Energy PRO 500 г">
+                  </picture>
                 </a>
                 <div class="item__wrapper-caption">
                   <a href="#item">
@@ -159,7 +171,10 @@
             <div class="item__wrapper">
               <div class="item__wrapper-inner">
                 <a class="item__picture-link" href="#item">
-                  <img class="item__picture" src="img/buckwheat-small-mobile@1x.jpg" srcset="img/buckwheat-small-mobile@2x.jpg 2x" width="140" height="144" alt="Cat Energy PRO 500 г">
+                  <picture>
+                    <source media="(min-width: 768px)" srcset="img/buckwheat-small-tablet@1x.png 1x, img/buckwheat-small-tablet@2x.png 2x">
+                    <img class="item__picture" src="img/buckwheat-small-mobile@1x.jpg" srcset="img/buckwheat-small-mobile@2x.jpg 2x" alt="Cat Energy PRO 500 г">
+                  </picture>
                 </a>
                 <div class="item__wrapper-caption">
                   <a href="#item">
@@ -188,7 +203,10 @@
             <div class="item__wrapper">
               <div class="item__wrapper-inner">
                 <a class="item__picture-link" href="#item">
-                  <img class="item__picture" src="img/buckwheat-big-mobile@1x.jpg" srcset="img/buckwheat-big-mobile@2x.jpg 2x" width="140" height="144" alt="Cat Energy PRO 1000 г">
+                  <picture>
+                    <source media="(min-width: 768px)" srcset="img/buckwheat-big-tablet@1x.png 1x, img/buckwheat-big-tablet@2x.png 2x">
+                    <img class="item__picture" src="img/buckwheat-big-mobile@1x.jpg" srcset="img/buckwheat-big-mobile@2x.jpg 2x" alt="Cat Energy PRO 1000 г">
+                  </picture>
                 </a>
                 <div class="item__wrapper-caption">
                   <a href="#item">
@@ -217,7 +235,10 @@
             <div class="item__wrapper">
               <div class="item__wrapper-inner">
                 <a class="item__picture-link" href="#item">
-                  <img class="item__picture" src="img/rice-small-mobile@1x.jpg" srcset="img/rice-small-mobile@2x.jpg 2x" width="140" height="144" alt="Cat Energy PRO 1000 г">
+                  <picture>
+                    <source media="(min-width: 768px)" srcset="img/rice-small-tablet@1x.png 1x, img/rice-small-tablet@2x.png 2x">
+                    <img class="item__picture" src="img/rice-small-mobile@1x.jpg" srcset="img/rice-small-mobile@2x.jpg 2x" alt="Cat Energy PRO 1000 г">
+                  </picture>
                 </a>
                 <div class="item__wrapper-caption">
                   <a href="#item">
