--- a/source/catalog.html
+++ b/source/catalog.html
@@ -43,10 +43,12 @@
             <div class="item__wrapper">
               <div class="item__wrapper-inner">
                 <a class="item__picture-link" href="#item">
-                  <picture>
-                    <source media="(min-width: 768px)" srcset="img/chicken-small-tablet@1x.png 1x, img/chicken-small-tablet@2x.png 2x">
-                    <img class="item__picture" src="img/chicken-small-mobile@1x.jpg" srcset="img/chicken-small-mobile@2x.jpg 2x" alt="Cat Energy PRO 500 г">
-                  </picture>
+                  <div class="item__picture-wrapper">
+                    <picture>
+                      <source media="(min-width: 768px)" srcset="img/chicken-small-tablet@1x.png 1x, img/chicken-small-tablet@2x.png 2x">
+                      <img class="item__picture" src="img/chicken-small-mobile@1x.jpg" srcset="img/chicken-small-mobile@2x.jpg 2x" alt="Cat Energy PRO 500 г">
+                    </picture>
+                  </div>
                 </a>
                 <div class="item__wrapper-caption">
                   <a href="#item">
@@ -75,10 +77,12 @@
             <div class="item__wrapper">
               <div class="item__wrapper-inner">
                 <a class="item__picture-link" href="#item">
-                  <picture>
-                    <source media="(min-width: 768px)" srcset="img/chicken-big-tablet@1x.png 1x, img/chicken-big-tablet@2x.png 2x">
-                    <img class="item__picture" src="img/chicken-big-mobile@1x.jpg" srcset="img/chicken-big-mobile@2x.jpg 2x" alt="Cat Energy PRO 500 г">
-                  </picture>
+                  <div class="item__picture-wrapper">
+                    <picture>
+                      <source media="(min-width: 768px)" srcset="img/chicken-big-tablet@1x.png 1x, img/chicken-big-tablet@2x.png 2x">
+                      <img class="item__picture" src="img/chicken-big-mobile@1x.jpg" srcset="img/chicken-big-mobile@2x.jpg 2x" alt="Cat Energy PRO 500 г">
+                    </picture>
+                  </div>
                 </a>
                 <div class="item__wrapper-caption">
                   <a href="#item">
@@ -107,10 +111,12 @@
             <div class="item__wrapper">
               <div class="item__wrapper-inner">
                 <a class="item__picture-link" href="#item">
-                  <picture>
-                    <source media="(min-width: 768px)" srcset="img/fish-small-tablet@1x.png 1x, img/fish-small-tablet@2x.png 2x">
-                    <img class="item__picture" src="img/fish-small-mobile@1x.jpg" srcset="img/fish-small-mobile@2x.jpg 2x" alt="Cat Energy PRO 500 г">
-                  </picture>
+                  <div class="item__picture-wrapper">
+                    <picture>
+                      <source media="(min-width: 768px)" srcset="img/fish-small-tablet@1x.png 1x, img/fish-small-tablet@2x.png 2x">
+                      <img class="item__picture" src="img/fish-small-mobile@1x.jpg" srcset="img/fish-small-mobile@2x.jpg 2x" alt="Cat Energy PRO 500 г">
+                    </picture>
+                  </div>
                 </a>
                 <div class="item__wrapper-caption">
                   <a href="#item">
@@ -139,10 +145,12 @@
             <div class="item__wrapper">
               <div class="item__wrapper-inner">
                 <a class="item__picture-link" href="#item">
-                  <picture>
-                    <source media="(min-width: 768px)" srcset="img/fish-big-tablet@1x.png 1x, img/fish-big-tablet@2x.png 2x">
-                    <img class="item__picture" src="img/fish-big-mobile@1x.jpg" srcset="img/fish-big-mobile@2x.jpg 2x" alt="Cat Energy PRO 500 г">
-                  </picture>
+                  <div class="item__picture-wrapper">
+                    <picture>
+                      <source media="(min-width: 768px)" srcset="img/fish-big-tablet@1x.png 1x, img/fish-big-tablet@2x.png 2x">
+                      <img class="item__picture" src="img/fish-big-mobile@1x.jpg" srcset="img/fish-big-mobile@2x.jpg 2x" alt="Cat Energy PRO 500 г">
+                    </picture>
+                  </div>
                 </a>
                 <div class="item__wrapper-caption">
                   <a href="#item">
@@ -171,10 +179,12 @@
             <div class="item__wrapper">
               <div class="item__wrapper-inner">
                 <a class="item__picture-link" href="#item">
-                  <picture>
-                    <source media="(min-width: 768px)" srcset="img/buckwheat-small-tablet@1x.png 1x, img/buckwheat-small-tablet@2x.png 2x">
-                    <img class="item__picture" src="img/buckwheat-small-mobile@1x.jpg" srcset="img/buckwheat-small-mobile@2x.jpg 2x" alt="Cat Energy PRO 500 г">
-                  </picture>
+                  <div class="item__picture-wrapper">
+                    <picture>
+                      <source media="(min-width: 768px)" srcset="img/buckwheat-small-tablet@1x.png 1x, img/buckwheat-small-tablet@2x.png 2x">
+                      <img class="item__picture" src="img/buckwheat-small-mobile@1x.jpg" srcset="img/buckwheat-small-mobile@2x.jpg 2x" alt="Cat Energy PRO 500 г">
+                    </picture>
+                  </div>
                 </a>
                 <div class="item__wrapper-caption">
                   <a href="#item">
@@ -203,10 +213,12 @@
             <div class="item__wrapper">
               <div class="item__wrapper-inner">
                 <a class="item__picture-link" href="#item">
-                  <picture>
-                    <source media="(min-width: 768px)" srcset="img/buckwheat-big-tablet@1x.png 1x, img/buckwheat-big-tablet@2x.png 2x">
-                    <img class="item__picture" src="img/buckwheat-big-mobile@1x.jpg" srcset="img/buckwheat-big-mobile@2x.jpg 2x" alt="Cat Energy PRO 1000 г">
-                  </picture>
+                  <div class="item__picture-wrapper">
+                    <picture>
+                      <source media="(min-width: 768px)" srcset="img/buckwheat-big-tablet@1x.png 1x, img/buckwheat-big-tablet@2x.png 2x">
+                      <img class="item__picture" src="img/buckwheat-big-mobile@1x.jpg" srcset="img/buckwheat-big-mobile@2x.jpg 2x" alt="Cat Energy PRO 1000 г">
+                    </picture>
+                  </div>
                 </a>
                 <div class="item__wrapper-caption">
                   <a href="#item">
@@ -235,10 +247,12 @@
             <div class="item__wrapper">
               <div class="item__wrapper-inner">
                 <a class="item__picture-link" href="#item">
-                  <picture>
-                    <source media="(min-width: 768px)" srcset="img/rice-small-tablet@1x.png 1x, img/rice-small-tablet@2x.png 2x">
-                    <img class="item__picture" src="img/rice-small-mobile@1x.jpg" srcset="img/rice-small-mobile@2x.jpg 2x" alt="Cat Energy PRO 1000 г">
-                  </picture>
+                  <div class="item__picture-wrapper">
+                    <picture>
+                      <source media="(min-width: 768px)" srcset="img/rice-small-tablet@1x.png 1x, img/rice-small-tablet@2x.png 2x">
+                      <img class="item__picture" src="img/rice-small-mobile@1x.jpg" srcset="img/rice-small-mobile@2x.jpg 2x" alt="Cat Energy PRO 1000 г">
+                    </picture>
+                  </div>
                 </a>
                 <div class="item__wrapper-caption">
                   <a href="#item">
