--- a/source/form.html
+++ b/source/form.html
@@ -8,6 +8,9 @@
   </head>
   <body>
 
+    <div style="display: none;">
+      <include src="source/img/sprite.svg"></include>
+    </div>
 
     <header class="page-header">
       <a class="page-header__logo logo-header" href="index.html">
