--- a/source/index.html
+++ b/source/index.html
@@ -8,6 +8,10 @@
   </head>
   <body>
 
+    <div style="display: none;">
+      <include src="source/img/sprite.svg"></include>
+    </div>
+
     <header class="page-header">
       <a class="page-header__logo logo-header">
         <picture>
