--- a/source/index.html
+++ b/source/index.html
@@ -65,12 +65,12 @@
             <li class="program-types__item program-types__item--slim">
               <h3 class="program-types__title program-types__title--slim">Похудение</h3>
               <p class="program-types__text">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
-              <a class="program-types__link" href="catalog-slim.html">Каталог Slim</a>
+              <a class="program-types__link" href="#catalog-slim.html">Каталог Slim</a>
             </li>
             <li class="program-types__item program-types__item--pro">
               <h3 class="program-types__title program-types__title--pro">Набор массы</h3>
               <p class="program-types__text program-types__text--mass">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
-              <a class="program-types__link" href="catalog-pro.html">Каталог Pro</a>
+              <a class="program-types__link" href="#catalog-pro.html">Каталог Pro</a>
             </li>
           </ul>
         </section>
