--- a/source/form.html
+++ b/source/form.html
@@ -162,16 +162,25 @@
             <li class="social__item social__item--vkontakte">
               <a class="social__link social__link--vkontakte" href="#vkontakte">
                 <span class="visually-hidden">Мы в Вконтакте</span>
+                <svg class="social__icon social__icon--vkontakte" role="img" width="22" height="12">
+                  <use xlink:href="#icon-vk-mobile"></use>
+                </svg>
               </a>
             </li>
             <li class="social__item social__item--instagram">
               <a class="social__link social__link--instagram" href="#instagram">
                 <span class="visually-hidden">Мы в инстаграме</span>
+                <svg class="social__icon social__icon--instagram" role="img" width="16" height="16">
+                  <use xlink:href="#icon-insta-mobile"></use>
+                </svg>
               </a>
             </li>
             <li class="social__item social__item--facebook">
               <a class="social__link social__link--facebook" href="#facebook">
                 <span class="visually-hidden">Мы в Фейсбуке</span>
+                <svg class="social__icon social__icon--facebook" role="img" width="10" height="19">
+                  <use xlink:href="#icon-fb-mobile"></use>
+                </svg>
               </a>
             </li>
           </ul>
