Изменил тип input в форме.

--- a/source/form.html
+++ b/source/form.html
@@ -56,11 +56,11 @@
                 </p>
                 <p class="form__item input-text">
                   <label class="input-text__label" for="form-weight">Вес (кг):*</label>
-                  <input class="input-text__input" type="text" id="form-weight" name="weight" placeholder="7">
+                  <input class="input-text__input" type="number" id="form-weight" name="weight" placeholder="7">
                 </p>
                 <p class="form__item input-text">
                   <label class="input-text__label" for="form-age">Возраст (лет):</label>
-                  <input class="input-text__input" type="text" id="form-age" name="age" placeholder="7">
+                  <input class="input-text__input" type="number" id="form-age" name="age" placeholder="7">
                 </p>
               </fieldset>
             </div>
