--- a/source/form.html
+++ b/source/form.html
@@ -80,7 +80,7 @@
               </fieldset>
             </div>
           </div>
-          <div class="form__program-wrapper-item form__program-wrapper-item--contacts">
+          <div class="form__program-wrapper-item form__program-wrapper-item--line form__program-wrapper-item--contacts">
             <fieldset class="form__block form__block--contacts">
               <legend class="form__block-title form__block-title--contacts">Контактные данные (владельца кота)</legend>
               <div class="form__contacts-wrapper">
@@ -101,13 +101,13 @@
               </div>
             </fieldset>
           </div>
-          <div class="form__program-wrapper-item form__program-wrapper-item--comment">
+          <div class="form__program-wrapper-item form__program-wrapper-item--line form__program-wrapper-item--comment">
             <fieldset class="form__block form__block--comment">
               <legend class="form__block-title form__block-title--comment">Комментарий</legend>
               <textarea class="form__textarea" name="comment" placeholder="Расскажите обо всех повадках кота"></textarea>
             </fieldset>
           </div>
-          <div class="form__program-wrapper-item form__program-wrapper-item--additionally">
+          <div class="form__program-wrapper-item form__program-wrapper-item--line form__program-wrapper-item--additionally">
             <fieldset class="form__block form__block--additionally">
               <legend class="form__block-title form__block-title--additionally">Дополнительно</legend>
               <div class="form__additional-wrapper">
