--- a/source/form.html
+++ b/source/form.html
@@ -24,7 +24,7 @@
         </picture>
       </a>
       <nav class="page-header__nav main-nav">
-        <button class="page-header__nav-toggle" type="button">
+        <button class="main-nav__toggle" type="button">
           <span class=" visually-hidden">Открыть меню</span>
         </button>
         <ul class="main-nav__list">
