--- a/source/index.html
+++ b/source/index.html
@@ -23,7 +23,7 @@
           <img class="page-header__logo-image" src="img/logo-mobile.svg" width="200" alt="Логотип компании Cat Energy">
         </picture>
       </a>
-      <nav class="page-header__nav main-nav main-nav--closed">
+      <nav class="page-header__nav main-nav main-nav--opened">
         <button class="main-nav__toggle" type="button">
           <span class=" visually-hidden">Открыть меню</span>
         </button>
