--- a/source/form.html
+++ b/source/form.html
@@ -23,7 +23,7 @@
           <img class="page-header__logo-image" src="img/logo-mobile.svg" width="200" alt="Логотип компании Cat Energy">
         </picture>
       </a>
-      <nav class="page-header__nav main-nav">
+      <nav class="page-header__nav main-nav main-nav--opened main-nav--no-js">
         <button class="main-nav__toggle" type="button">
           <span class=" visually-hidden">Открыть меню</span>
         </button>
@@ -197,6 +197,6 @@
         </div>
       </div>
     </footer>
-
+    <script src="js/script.js"></script>
   </body>
 </html>
