--- a/source/index.html
+++ b/source/index.html
@@ -164,24 +164,24 @@
 
         <div class="page-footer__social social">
           <ul class="social__list">
-            <li class="social__item social__item--vkontakte">
-              <a class="social__link social__link--vkontakte" href="#vkontakte">
+            <li class="social__item">
+              <a class="social__link" href="#vkontakte">
                 <span class="visually-hidden">Мы в Вконтакте</span>
                 <svg class="social__icon social__icon--vkontakte" role="img" width="22" height="12">
                   <use xlink:href="#icon-vk-mobile"></use>
                 </svg>
               </a>
             </li>
-            <li class="social__item social__item--instagram">
-              <a class="social__link social__link--instagram" href="#instagram">
+            <li class="social__item">
+              <a class="social__link" href="#instagram">
                 <span class="visually-hidden">Мы в инстаграме</span>
                 <svg class="social__icon social__icon--instagram" role="img" width="16" height="16">
                   <use xlink:href="#icon-insta-mobile"></use>
                 </svg>
               </a>
             </li>
-            <li class="social__item social__item--facebook">
-              <a class="social__link social__link--facebook" href="#facebook">
+            <li class="social__item">
+              <a class="social__link" href="#facebook">
                 <span class="visually-hidden">Мы в Фейсбуке</span>
                 <svg class="social__icon social__icon--facebook" role="img" width="10" height="19">
                   <use xlink:href="#icon-fb-mobile"></use>
