--- a/source/index.html
+++ b/source/index.html
@@ -15,7 +15,7 @@
       <include src="build/img/sprite.svg"></include>
     </div>
 
-    <header class="page-header">
+    <header class="page-header page-header--background">
       <a class="page-header__logo logo-header">
         <picture>
           <source media="(min-width: 1300px)" srcset="img/logo-desktop.svg">
