--- a/source/form.html
+++ b/source/form.html
@@ -16,29 +16,31 @@
     </div>
 
     <header class="page-header">
-      <a class="page-header__logo logo-header" href="index.html">
-        <picture>
-          <source media="(min-width: 1300px)" srcset="img/logo-desktop.svg">
-          <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
-          <img class="page-header__logo-image" src="img/logo-mobile.svg" width="200" alt="Логотип компании Cat Energy">
-        </picture>
-      </a>
-      <nav class="page-header__nav main-nav main-nav--opened main-nav--no-js">
-        <button class="main-nav__toggle" type="button">
-          <span class=" visually-hidden">Открыть меню</span>
-        </button>
-        <ul class="main-nav__list">
-          <li class="main-nav__item">
-            <a class="main-nav__link" href="index.html">Главная</a>
-          </li>
-          <li class="main-nav__item">
-            <a class="main-nav__link" href="catalog.html">Каталог продукции</a>
-          </li>
-          <li class="main-nav__item">
-            <a class="main-nav__link main-nav__link--active">Подбор программы</a>
-          </li>
-        </ul>
-      </nav>
+      <div class="header__container">
+        <a class="page-header__logo logo-header" href="index.html">
+          <picture>
+            <source media="(min-width: 1300px)" srcset="img/logo-desktop.svg">
+            <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
+            <img class="page-header__logo-image" src="img/logo-mobile.svg" width="200" alt="Логотип компании Cat Energy">
+          </picture>
+        </a>
+        <nav class="page-header__nav main-nav main-nav--opened main-nav--no-js">
+          <button class="main-nav__toggle" type="button">
+            <span class=" visually-hidden">Открыть меню</span>
+          </button>
+          <ul class="main-nav__list">
+            <li class="main-nav__item">
+              <a class="main-nav__link" href="index.html">Главная</a>
+            </li>
+            <li class="main-nav__item">
+              <a class="main-nav__link" href="catalog.html">Каталог продукции</a>
+            </li>
+            <li class="main-nav__item">
+              <a class="main-nav__link main-nav__link--active">Подбор программы</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
     </header>
 
     <main class="page-main">
